--- a/Music/Music.csproj
+++ b/Music/Music.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="python" Version="3.13.5" />
     <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="138.0.7204.18300" />
+    <PackageReference Include="TagLibSharp" Version="2.3.0" />
     <PackageReference Include="Telegram.Bot" Version="22.1.1" />
   </ItemGroup>
 
